[sc-7737] Implement new regional endpoints in Dashboard
- Update the SDK core for supporting regional endpoints related to knowledge boxes
- Add accountId in Nuclia options and set it whenever the account is set
- Set kb id and kb zone in Nuclia options whenever the KB is selected
- Add `zone` in dashboard route
  - rename `stash` param into `kb` in dashboard and contributor route
- Add missing translations for (un)publishing KB confirmation dialog title
- Fix refresh KB list after updating KB

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -706,6 +706,7 @@
 	"stash.publish.title": "Publicar la Knowledge Box",
 	"stash.publish.warning": "Si publiques la Knowledge Box \"{{ kb }}\" faràs pública tota la informació que conté.",
 	"stash.retire.error": "S'ha produït un error en anul·lar la publicació del Knowledge Box",
+	"stash.retire.title": "Anul·la publicació de la Knowledge Box",
 	"stash.retire.warning": "Si despubliques la Knowledge Box \"{{ kb }}\" fas privada tota la informació que conté.",
 	"stash.search": "Cerca ",
 	"stash.search-toggle-answer": "Resposta generativa",
