--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -786,6 +786,7 @@
 	"stash.widgets.filter.help": "Zeigt Filter in der Suchleiste an",
 	"stash.widgets.filter.label": "Filter",
 	"stash.widgets.filter_type": "Filtertypen",
+	"stash.widgets.help": "Sie hat Vorrang vor der in den Knowledge Box-Einstellungen definierten Benutzeraufforderung. Hinweis: Die promptstrategie kann sich je nach generativem Modell ändern. Sehen Sie sich die Beispiele auf der Einstellungsseite an.",
 	"stash.widgets.hideLogo.help": "Nuclia-Logo aus der Suchleiste ausblenden",
 	"stash.widgets.hideLogo.label": "Logo ausblenden",
 	"stash.widgets.hideSources.help": "Verstecken Sie die Quellen, die zur Generierung der Antwort verwendet wurden",
@@ -810,6 +811,7 @@
 	"stash.widgets.permalink.label": "Permalinks",
 	"stash.widgets.placeholder": "Platzhalter für die Suchleiste",
 	"stash.widgets.preview": "Vorschau",
+	"stash.widgets.prompt": "Benutzer prompt",
 	"stash.widgets.publish_kb": "Sie können es im veröffentlichen",
 	"stash.widgets.publish_kb_link": "Instrumententafel",
 	"stash.widgets.recommendations": "Empfehlungen",
