--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -810,6 +810,7 @@
 	"stash.widgets.permalink.label": "Links permanentes",
 	"stash.widgets.placeholder": "Espaço reservado da barra de pesquisa",
 	"stash.widgets.preview": "Visualizar",
+	"stash.widgets.prompt": "Prompt do usuário",
 	"stash.widgets.publish_kb": "Você pode publicá-lo no",
 	"stash.widgets.publish_kb_link": "Painel de controle",
 	"stash.widgets.recommendations": "Recomendações",
