--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -785,7 +785,6 @@
 	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
 	"stash.widgets.filter.label": "Filtre",
 	"stash.widgets.filter_type": "Tipus de filtre",
-	"stash.widgets.help": "Tindrà prioritat a la indicació de l'usuari definida a la configuració de la Knowledge Box. Nota: l'estratègia del prompt pot canviar en funció del model generatiu. Comproveu els exemples a la pàgina de configuració.",
 	"stash.widgets.hideLogo.help": "Amagar el logotip de Nuclia de la barra de cerca",
 	"stash.widgets.hideLogo.label": "Amagar logotip",
 	"stash.widgets.hideSources.help": "Amaga les fonts utilitzades per generar la resposta",
@@ -810,7 +809,8 @@
 	"stash.widgets.permalink.label": "Permalinks",
 	"stash.widgets.placeholder": "Placeholder de la barra de cerca",
 	"stash.widgets.preview": "Vista prèvia",
-	"stash.widgets.prompt": "Prompt de l'usuari",
+	"stash.widgets.prompt.help": "Tindrà prioritat a el prompt de l'usuari definida a la configuració del Knowledge Box. Nota: l'estratègia del prompt pot canviar en funció del model generatiu. Comproveu els exemples a la pàgina de configuració.",
+	"stash.widgets.prompt.label": "Prompt de l'usuari",
 	"stash.widgets.publish_kb": "Podeu publicar·lo des de",
 	"stash.widgets.publish_kb_link": "Panell",
 	"stash.widgets.recommendations": "Recomanacions",
