--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -786,7 +786,6 @@
 	"stash.widgets.filter.help": "Displays filters in search bar",
 	"stash.widgets.filter.label": "Filter",
 	"stash.widgets.filter_type": "Filter types",
-	"stash.widgets.help": "It will take precedence on the user prompt defined in the Knowledge Box settings. Note: the prompt strategy might change depending on the generative model. Check the examples in the settings page.",
 	"stash.widgets.hideLogo.help": "Hide Nuclia logo from search bar",
 	"stash.widgets.hideLogo.label": "Hide logo",
 	"stash.widgets.hideSources.help": "Hide sources used to generate the answer",
@@ -811,7 +810,8 @@
 	"stash.widgets.permalink.label": "Permalinks",
 	"stash.widgets.placeholder": "Search bar placeholder",
 	"stash.widgets.preview": "Preview",
-	"stash.widgets.prompt": "User prompt",
+	"stash.widgets.prompt.help": "It will take precedence on the user prompt defined in the Knowledge Box settings. Note: the prompt strategy might change depending on the generative model. Check the examples in the settings page.",
+	"stash.widgets.prompt.label": "User prompt",
 	"stash.widgets.publish_kb": "You can publish it from the",
 	"stash.widgets.publish_kb_link": "Dashboard",
 	"stash.widgets.recommendations": "Recommendations",
