--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -785,7 +785,6 @@
 	"stash.widgets.filter.help": "Muestra filtros en la barra de búsqueda",
 	"stash.widgets.filter.label": "Filtrar",
 	"stash.widgets.filter_type": "Tipos de filtro",
-	"stash.widgets.help": "Tendrá prioridad en el prompt de usuario definido en la configuración de KB. Nota: la estrategia de prompt puede cambiar según el modelo generativo. Consulte los ejemplos en la página de configuración.",
 	"stash.widgets.hideLogo.help": "Ocultar el logotipo de Nuclia de la barra de búsqueda",
 	"stash.widgets.hideLogo.label": "Ocultar logotipo",
 	"stash.widgets.hideSources.help": "Ocultar las fuentes utilizadas para generar la respuesta",
@@ -810,7 +809,8 @@
 	"stash.widgets.permalink.label": "Permalinks",
 	"stash.widgets.placeholder": "Placeholder de la barra de búsqueda",
 	"stash.widgets.preview": "Previsualizar",
-	"stash.widgets.prompt": "Prompt de usuario",
+	"stash.widgets.prompt.help": "Tendrá prioridad en el prompt de usuario definido en la configuración del Knowledge Box. Nota: la estrategia de prompt puede cambiar según el modelo generativo. Consulte los ejemplos en la página de configuración.",
+	"stash.widgets.prompt.label": "Prompt de usuario",
 	"stash.widgets.publish_kb": "Puedes publicarlo desde el",
 	"stash.widgets.publish_kb_link": "Tablero",
 	"stash.widgets.recommendations": "Recomendaciones",
