--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -810,6 +810,8 @@
 	"stash.widgets.permalink.label": "Liens permanents",
 	"stash.widgets.placeholder": "Espace réservé dans la barre de recherche",
 	"stash.widgets.preview": "Aperçu",
+	"stash.widgets.prompt.help": "Il aura priorité sur le prompt utilisateur définie dans les paramètres de la Knowledge Box. Remarque : la stratégie de prompt peut changer en fonction du modèle génératif. Vérifiez les exemples dans la page des paramètres.",
+	"stash.widgets.prompt.label": "Prompt utilisateur",
 	"stash.widgets.publish_kb": "Vous pouvez le publier à partir du",
 	"stash.widgets.publish_kb_link": "Tableau de bord",
 	"stash.widgets.recommendations": "Recommandations",
