[sc-7622] Warning when uploading archives or spreadsheets

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -890,6 +890,10 @@
 	"upload.uploading_files": "<strong>Càrrega de fitxers.</strong> Mentrestant, no dubteu a utilitzar Nuclia",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al Knowledge Box.",
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
+	"upload.warning-archive-description": "Els arxius comprimits (com ara .zip, .tar, etc.) són compatibles, però tingueu en compte que tots els fitxers continguts en un arxiu comprimit s'unificaran en un sol recurs.<br><br>Si espereu obtenir resultats separats durant la cerca, és millor extreure els fitxers i pujar-los com a fitxers independents.",
+	"upload.warning-archive-title": "Estas a punt de pujar {{num}} fitxers comprimits",
+	"upload.warning-spreadsheet-title": "Estas a punt de pujar {{num}} fitxers de full de càlcul",
+	"upload.warning-spreadsheets-description": "És possible que la indexació semàntica d'aquests fitxersno sigui òptima en funció del seu format i estructura. Consulteu la <a href=\"{{url}}\" target=\"_blank\">documentació</a> per a més informació.",
 	"user.logout": "Sortir",
 	"validation.name_required": "Introdueix el nom i cognoms",
 	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)",
