--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -891,6 +891,10 @@
 	"upload.uploading_files": "<strong>Dateien hochladen.</strong> Sie können Nuclia in der Zwischenzeit gerne nutzen",
 	"upload.use_folder_as_labels.help": "Der Ordner der ersten Ebene ist der Name des Etikettensatzes, Unterordner sind Etiketten. Wenn Unterordner verschachtelt sind, erhalten Dateien mehrere Bezeichnungen. Beschriftungen werden automatisch erstellt, wenn sie noch nicht in der Knowledge Box definiert sind.",
 	"upload.use_folder_as_labels.label": "Verwenden Sie Ordnernamen als Labelnamen",
+	"upload.warning-archive-description": "Archivdateien (wie .zip, .tar usw.) werden unterstützt. Beachten Sie jedoch, dass alle in einem Archiv enthaltenen Dateien in einer einzigen Ressource zusammengefasst werden.<br><br>Wenn Sie bei der Suche getrennte Ergebnisse erwarten, ist es besser, die Dateien zu extrahieren und als separate Dateien hochzuladen.",
+	"upload.warning-archive-title": "Sie sind dabei, {{num}} Archivdateien hochzuladen",
+	"upload.warning-spreadsheet-title": "Sie sind dabei, {{num}} Tabellendateien hochzuladen",
+	"upload.warning-spreadsheets-description": "Die semantische Indizierung dieser Dateien ist je nach Format und Struktur möglicherweise nicht optimal. Weitere Informationen finden Sie in der <a href=\"{{url}}\" target=\"_blank\">Dokumentation</a> .",
 	"user.logout": "Ausloggen",
 	"validation.name_required": "Fügen Sie Ihren Vor- und Nachnamen hinzu",
 	"validation.url_required": "Geben Sie eine gültige URL ein (z. B. https://nuclia.com)",
