--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -890,6 +890,10 @@
 	"upload.uploading_files": "<strong>Subiendo archivos.</strong> Siéntase libre de usar Nuclia mientras tanto",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la Knowledge Box.",
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
+	"upload.warning-archive-description": "Se admiten archivos comprimidos (como .zip, .tar, etc.), pero tenga en cuenta que todos los archivos contenidos en un archivo comprimido se unificarán en un único recurso.<br><br>Si espera obtener resultados separados al realizar una búsqueda, es mejor extraer los archivos y subirlos como archivos independientes.",
+	"upload.warning-archive-title": "Estás a punto de subir {{num}} archivos comprimidos",
+	"upload.warning-spreadsheet-title": "Estás a punto de cargar {{num}} archivos de hoja de cálculo",
+	"upload.warning-spreadsheets-description": "Es posible que la indexación semántica de estos archivos no sea óptima en funcion de su formato y estructura. Consulte la <a href=\"{{url}}\" target=\"_blank\">documentación</a> para obtener más información.",
 	"user.logout": "Salir",
 	"validation.name_required": "Añade tu nombre y apellidos",
 	"validation.url_required": "Introduce una URL válida (por ejemplo https://nuclia.com)",
