--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -891,6 +891,10 @@
 	"upload.uploading_files": "<strong>Téléchargement des fichiers.</strong> N'hésitez pas à utiliser Nuclia en attendant.",
 	"upload.use_folder_as_labels.help": "Le dossier de premier niveau est le nom du jeu d'étiquettes, les sous-dossiers sont des étiquettes. Si les sous-dossiers sont imbriqués, les fichiers recevront plusieurs étiquettes. Les étiquettes seront créées automatiquement si elles ne sont pas encore définies dans la Knowledge Box.",
 	"upload.use_folder_as_labels.label": "Utiliser les noms de dossiers comme noms d'étiquettes",
+	"upload.warning-archive-description": "Les fichiers d'archives (comme .zip, .tar, etc.) sont pris en charge, mais gardez à l'esprit que tous les fichiers contenus dans une archive seront rassemblés dans une seule ressource.<br><br>Si vous vous attendez à obtenir des résultats séparés lors de la recherche, il est préférable d'extraire les fichiers et de les télécharger séparément.",
+	"upload.warning-archive-title": "Vous êtes sur le point de télécharger {{num}} fichiers compressés",
+	"upload.warning-spreadsheet-title": "Vous êtes sur le point d'importer {{num}} fichiers de feuille de calcul",
+	"upload.warning-spreadsheets-description": "L'indexation sémantique de ces fichiers peut ne pas être optimale en fonction de leur format et de leur structure. Consultez la <a href=\"{{url}}\" target=\"_blank\">documentation</a> pour plus d'informations.",
 	"user.logout": "Déconnexion",
 	"validation.name_required": "Ajoutez vos nom et prénom",
 	"validation.url_required": "Saisir une URL valide (par exemple https://nuclia.com)",
