--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -891,6 +891,10 @@
 	"upload.uploading_files": "<strong>Fazendo upload de arquivos.</strong> Enquanto isso, sinta-se à vontade para usar o Nuclia",
 	"upload.use_folder_as_labels.help": "A pasta de primeiro nível é o nome do conjunto de rótulos, as subpastas são rótulos. Se as subpastas estiverem aninhadas, os arquivos receberão vários rótulos. Os rótulos serão criados automaticamente se ainda não estiverem definidos na Knowledge Box.",
 	"upload.use_folder_as_labels.label": "Use nomes de pastas como nomes de rótulos",
+	"upload.warning-archive-description": "Arquivos compactados (como .zip, .tar, etc.) são suportados, mas lembre-se de que todos os arquivos contidos em um arquivo compactado serão reunidos em um único recurso.<br><br>Se você espera obter resultados separados durante a pesquisa, é melhor extrair os arquivos e carregá-los em arquivos separados.",
+	"upload.warning-archive-title": "Você está prestes a fazer upload de {{num}} arquivos compactados",
+	"upload.warning-spreadsheet-title": "Você está prestes a fazer upload de {{num}} arquivos de planilha",
+	"upload.warning-spreadsheets-description": "A indexação semântica desses arquivos pode não ser ideal dependendo do formato e da estrutura. Consulte a <a href=\"{{url}}\" target=\"_blank\">documentação</a> para obter mais informações.",
 	"user.logout": "Sair",
 	"validation.name_required": "Adicione seu nome e sobrenomes",
 	"validation.url_required": "Insira um URL válido (por exemplo, https://nuclia.com)",
