--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -894,7 +894,7 @@
 	"upload.warning-archive-description": "Archive files (like .zip, .tar, etc.) are supported, but take note that all the files contained in an archive will be gathered in a single resource.<br><br>\nIf you expect to get separated results when searching, it is better to extract the files and upload them as separate files.",
 	"upload.warning-archive-title": "You are about to upload {{num}} archive files",
 	"upload.warning-spreadsheet-title": "You are about to upload {{num}} spreadsheet files",
-	"upload.warning-spreadsheets-description": "The semantic indexing of these files might not be optimal depending on their format and structure. See the <a href=\"{{url}}\" target=\"_blank\">documentation</a> for mor information.",
+	"upload.warning-spreadsheets-description": "The semantic indexing of these files might not be optimal depending on their format and structure. See the <a href=\"{{url}}\" target=\"_blank\">documentation</a> for more information.",
 	"user.logout": "Log out",
 	"validation.name_required": "Add your name and surnames",
 	"validation.url_required": "Enter a valid URL (e.g. https://nuclia.com)",
