[sc-7790] Avoid confusion when deleting account

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -29,11 +29,11 @@
 	"account.delete.keep_user_title": "Vols mantenir el teu perfil d'usuari?",
 	"account.delete.subscription_detected": "S'ha detectat una subscripció activa",
 	"account.delete_account": "Eliminar compte",
-	"account.delete_account_confirm": "Vull eliminar el compte {{account}} i totes les dades que conté.",
+	"account.delete_account_confirm": "Vull suprimir aquest compte juntament amb totes les Knowledge Boxes existents i les seves dades",
 	"account.delete_account_confirm_title": "Eliminar el compte?",
-	"account.delete_account_warning_1": "Si suprimiu el compte {{account}} , se suprimiran totes les dades existents",
+	"account.delete_account_warning_1": "Al eliminar aquest compte, s'eliminaran totes les dades existents",
 	"account.delete_account_warning_2": "el compte i qualsevol assignació de dades de configuració, usuaris i rols",
-	"account.delete_account_warning_3": "qualsevol Knowledge Box i totes les seves dades. Inclou dades indexades a NucliaDB",
+	"account.delete_account_warning_3": "totes les Knowledge Boxes i les seves dades",
 	"account.delete_account_warning_4": "qualsevol model entrenat de qualsevol Knowledge Box",
 	"account.delete_user": "Vols suprimir l'usuari?",
 	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
