--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -29,11 +29,11 @@
 	"account.delete.keep_user_title": "Möchten Sie Ihr Benutzerprofil behalten?",
 	"account.delete.subscription_detected": "Aktives Abonnement erkannt",
 	"account.delete_account": "Konto löschen",
-	"account.delete_account_confirm": "Ich möchte das Konto {{account}} und alle damit verbundenen Daten löschen.",
+	"account.delete_account_confirm": "Ich möchte dieses Konto zusammen mit allen vorhandenen Knowledge Boxes und ihren Daten löschen",
 	"account.delete_account_confirm_title": "Konto löschen?",
-	"account.delete_account_warning_1": "Durch das Löschen des Kontos {{account}} werden alle vorhandenen Daten gelöscht",
+	"account.delete_account_warning_1": "Durch das Löschen dieses Kontos werden alle vorhandenen Daten gelöscht",
 	"account.delete_account_warning_2": "das Konto sowie etwaige Konfigurationsdaten, Benutzer- und Rollenzuweisungen",
-	"account.delete_account_warning_3": "jede Knowledge Box und alle ihre Daten. Einschließlich der in NucliaDB indizierten Daten",
+	"account.delete_account_warning_3": "alle Knowledge Boxes und ihre Daten",
 	"account.delete_account_warning_4": "jedes trainierte Modell einer beliebigen Knowledge Box",
 	"account.delete_user": "Benutzer löschen?",
 	"account.delete_user_confirm": "Möchten Sie Ihren Benutzer und den Zugang zu Nuclia löschen?",
