--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -29,11 +29,11 @@
 	"account.delete.keep_user_title": "Would you like to keep your user profile?",
 	"account.delete.subscription_detected": "Active subscription detected",
 	"account.delete_account": "Delete account",
-	"account.delete_account_confirm": "I want to delete the  {{account}} account and all its associated data.",
+	"account.delete_account_confirm": "I want to delete this account along with all existing Knowledge Boxes and their data",
 	"account.delete_account_confirm_title": "Delete the account?",
-	"account.delete_account_warning_1": "Deleting the account {{account}} will delete all existing data",
+	"account.delete_account_warning_1": "Deleting this account will delete all existing data",
 	"account.delete_account_warning_2": "the account, and any configuration data, users and roles assignment",
-	"account.delete_account_warning_3": "any Knowledge Box and all its data. Including data indexed in NucliaDB",
+	"account.delete_account_warning_3": "all Knowledge Boxes and their data",
 	"account.delete_account_warning_4": "any trained model of any Knowledge Box",
 	"account.delete_user": "Delete user?",
 	"account.delete_user_confirm": "Do you want to delete your user and the access to Nuclia?",
