--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -29,11 +29,11 @@
 	"account.delete.keep_user_title": "¿Quieres mantener tu perfil de usuario?",
 	"account.delete.subscription_detected": "Suscripción activa detectada",
 	"account.delete_account": "Eliminar cuenta",
-	"account.delete_account_confirm": "Quiero eliminar la cuenta {{account}} y todos los datos que contiene.",
+	"account.delete_account_confirm": "Quiero eliminar esta cuenta junto con todas las Knowledge Boxes existentes y sus datos.",
 	"account.delete_account_confirm_title": "Eliminar la cuenta?",
-	"account.delete_account_warning_1": "Eliminar la cuenta {{account}} eliminará todos los datos existentes",
+	"account.delete_account_warning_1": "Al eliminar esta cuenta se eliminarán todos los datos existentes.",
 	"account.delete_account_warning_2": "la cuenta y cualquier dato de configuración, usuarios y asignación de roles.",
-	"account.delete_account_warning_3": "cualquier Knowledge Box y todos sus datos. Incluyendo datos indexados en NucliaDB",
+	"account.delete_account_warning_3": "todas las Knowledge Boxes y sus datos",
 	"account.delete_account_warning_4": "cualquier modelo entrenado de cualquier Knowledge Box",
 	"account.delete_user": "¿Eliminar usuario?",
 	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
