--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -29,11 +29,11 @@
 	"account.delete.keep_user_title": "Vous souhaitez conserver votre profil d'utilisateur ?",
 	"account.delete.subscription_detected": "Abonnement actif détecté",
 	"account.delete_account": "Supprimer un compte",
-	"account.delete_account_confirm": "Je souhaite supprimer le compte {{account}} et toutes les données qui y sont associées.",
+	"account.delete_account_confirm": "Je souhaite supprimer ce compte ainsi que toutes les Knowledge Boxes existantes et leurs données",
 	"account.delete_account_confirm_title": "Supprimer le compte ?",
-	"account.delete_account_warning_1": "La suppression du compte {{account}} efface toutes les données existantes.",
+	"account.delete_account_warning_1": "La suppression de ce compte supprimera toutes les données existantes",
 	"account.delete_account_warning_2": "le compte et toutes les données de configuration, l'affectation des utilisateurs et des rôles",
-	"account.delete_account_warning_3": "n'importe quelle Knowledge Box et toutes ses données. Y compris les données indexées dans NucliaDB",
+	"account.delete_account_warning_3": "toutes les Knowledge Boxes et leurs données",
 	"account.delete_account_warning_4": "n'importe quel modèle formé de n'importe quelle Knowledge Box",
 	"account.delete_user": "Supprimer un utilisateur ?",
 	"account.delete_user_confirm": "Voulez-vous supprimer votre utilisateur et l'accès à Nuclia ?",
