--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -29,11 +29,11 @@
 	"account.delete.keep_user_title": "Gostaria de manter seu perfil de usuário?",
 	"account.delete.subscription_detected": "Assinatura ativa detectada",
 	"account.delete_account": "Deletar conta",
-	"account.delete_account_confirm": "Quero excluir a conta {{account}} e todos os dados associados.",
+	"account.delete_account_confirm": "Quero excluir esta conta junto com todas as Knowledge Boxes existentes e seus dados",
 	"account.delete_account_confirm_title": "Excluir a conta?",
-	"account.delete_account_warning_1": "Excluir a conta {{account}} excluirá todos os dados existentes",
+	"account.delete_account_warning_1": "Excluir esta conta excluirá todos os dados existentes",
 	"account.delete_account_warning_2": "a conta e quaisquer dados de configuração, usuários e atribuição de funções",
-	"account.delete_account_warning_3": "qualquer Knowledge Box e todos os seus dados. Incluindo dados indexados no NucliaDB",
+	"account.delete_account_warning_3": "todas as Knowledge Boxes e seus dados",
 	"account.delete_account_warning_4": "qualquer modelo treinado de qualquer Knowledge Box",
 	"account.delete_user": "Deletar usuário?",
 	"account.delete_user_confirm": "Deseja excluir seu usuário e o acesso ao Nuclia?",
